// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        />
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
                style="transform: translateX(0px);"
              />
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-size-m t-is-active t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡1
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡2
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡3
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          class="tabs-content"
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`combination.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              name="add"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          class="tabs-content"
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`custom.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              name="add"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          class="tabs-content"
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        />
        <div
          class="t-tabs__nav-container t-is-top"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
                style="transform: translateX(0px);"
              />
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-size-m t-is-top t-is-disabled"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡一
                  </span>
                </div>
              </div>
              <div
                class="t-tabs__nav-item t-size-m t-is-active t-is-top"
              >
                <div
                  class="t-tabs__nav-item-wrapper"
                  style="position: relative;"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡二
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          style="margin: 20px;"
        >
          这是一个Tabs
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-tabs"
  >
    <button
      class="t-button t-button--theme-default t-button--variant-outline"
      style="position: relative;"
    >
      <span
        class="t-button__text"
      >
        切换到卡片型
      </span>
    </button>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                  style="transform: translateX(0px);"
                />
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        <svg
                          class="t-icon t-icon-discount"
                          version="1.1"
                          viewBox="0 0 1024 1024"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M493.04229568 116.1597152C508.86786752 116.30420928 524.0067104 121.97761344 535.39539904 133.36630208L942.6889024 540.659808C967.6824576 565.65336256 965.1497984 608.70858112 937.0320512 636.82633024L631.56192128 942.2964608C603.44417216 970.414208 560.3889536 972.9468672 535.39539904 947.953312L128.10189312 540.659808C116.179456 528.73737088 110.52056832 512.70502848 110.91453056 496.14468224L110.89530624 496.1568576 110.89530624 180.1597152C110.89530624 147.33822144 135.6018784 120.28725696 167.43155456 116.59028992L174.89530624 116.1597152 493.04229568 116.1597152ZM174.89530624 180.0957152L174.89530624 496.1568576 174.06330624 496.1277152 580.65023296 902.6984768 897.4340736 585.91464192 491.69530624 180.1597152 174.89530624 180.0957152ZM396.1453088 256.40588416C466.8377568 256.40588416 524.1453088 313.71343616 524.1453088 384.40588416 524.1453088 455.09833216 466.8377568 512.40588416 396.1453088 512.40588416 325.4528608 512.40588416 268.1453088 455.09833216 268.1453088 384.40588416 268.1453088 313.71343616 325.4528608 256.40588416 396.1453088 256.40588416ZM396.1453088 320.40588416C360.7990848 320.40588416 332.1453088 349.05966016 332.1453088 384.40588416 332.1453088 419.75210816 360.7990848 448.40588416 396.1453088 448.40588416 431.4915328 448.40588416 460.1453088 419.75210816 460.1453088 384.40588416 460.1453088 349.05966016 431.4915328 320.40588416 396.1453088 320.40588416Z"
                            fill-opacity=".9"
                            fill-rule="evenodd"
                          />
                        </svg>
                        选项卡
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        <svg
                          class="t-icon t-icon-discount"
                          version="1.1"
                          viewBox="0 0 1024 1024"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M493.04229568 116.1597152C508.86786752 116.30420928 524.0067104 121.97761344 535.39539904 133.36630208L942.6889024 540.659808C967.6824576 565.65336256 965.1497984 608.70858112 937.0320512 636.82633024L631.56192128 942.2964608C603.44417216 970.414208 560.3889536 972.9468672 535.39539904 947.953312L128.10189312 540.659808C116.179456 528.73737088 110.52056832 512.70502848 110.91453056 496.14468224L110.89530624 496.1568576 110.89530624 180.1597152C110.89530624 147.33822144 135.6018784 120.28725696 167.43155456 116.59028992L174.89530624 116.1597152 493.04229568 116.1597152ZM174.89530624 180.0957152L174.89530624 496.1568576 174.06330624 496.1277152 580.65023296 902.6984768 897.4340736 585.91464192 491.69530624 180.1597152 174.89530624 180.0957152ZM396.1453088 256.40588416C466.8377568 256.40588416 524.1453088 313.71343616 524.1453088 384.40588416 524.1453088 455.09833216 466.8377568 512.40588416 396.1453088 512.40588416 325.4528608 512.40588416 268.1453088 455.09833216 268.1453088 384.40588416 268.1453088 313.71343616 325.4528608 256.40588416 396.1453088 256.40588416ZM396.1453088 320.40588416C360.7990848 320.40588416 332.1453088 349.05966016 332.1453088 384.40588416 332.1453088 419.75210816 360.7990848 448.40588416 396.1453088 448.40588416 431.4915328 448.40588416 460.1453088 419.75210816 460.1453088 384.40588416 460.1453088 349.05966016 431.4915328 320.40588416 396.1453088 320.40588416Z"
                            fill-opacity=".9"
                            fill-rule="evenodd"
                          />
                        </svg>
                        选项卡
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        <svg
                          class="t-icon t-icon-discount"
                          version="1.1"
                          viewBox="0 0 1024 1024"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M493.04229568 116.1597152C508.86786752 116.30420928 524.0067104 121.97761344 535.39539904 133.36630208L942.6889024 540.659808C967.6824576 565.65336256 965.1497984 608.70858112 937.0320512 636.82633024L631.56192128 942.2964608C603.44417216 970.414208 560.3889536 972.9468672 535.39539904 947.953312L128.10189312 540.659808C116.179456 528.73737088 110.52056832 512.70502848 110.91453056 496.14468224L110.89530624 496.1568576 110.89530624 180.1597152C110.89530624 147.33822144 135.6018784 120.28725696 167.43155456 116.59028992L174.89530624 116.1597152 493.04229568 116.1597152ZM174.89530624 180.0957152L174.89530624 496.1568576 174.06330624 496.1277152 580.65023296 902.6984768 897.4340736 585.91464192 491.69530624 180.1597152 174.89530624 180.0957152ZM396.1453088 256.40588416C466.8377568 256.40588416 524.1453088 313.71343616 524.1453088 384.40588416 524.1453088 455.09833216 466.8377568 512.40588416 396.1453088 512.40588416 325.4528608 512.40588416 268.1453088 455.09833216 268.1453088 384.40588416 268.1453088 313.71343616 325.4528608 256.40588416 396.1453088 256.40588416ZM396.1453088 320.40588416C360.7990848 320.40588416 332.1453088 349.05966016 332.1453088 384.40588416 332.1453088 419.75210816 360.7990848 448.40588416 396.1453088 448.40588416 431.4915328 448.40588416 460.1453088 419.75210816 460.1453088 384.40588416 460.1453088 349.05966016 431.4915328 320.40588416 396.1453088 320.40588416Z"
                            fill-opacity=".9"
                            fill-rule="evenodd"
                          />
                        </svg>
                        选项卡
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            class="tabs-content"
            style="margin: 20px;"
          >
            选项卡1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-tabs"
  >
    <div
      class="t-tabs__header t-is-top"
    >
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__operations t-tabs__operations--left"
        />
        <div
          class="t-tabs__operations t-tabs__operations--right"
        >
          <div
            class="t-tabs__add-btn t-tabs__btn t-size-m"
          >
            <svg
              class="t-icon t-icon-add"
              name="add"
              version="1.1"
              viewBox="0 0 1024 1024"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M470.39872 553.59872V800H553.59872V553.59872H800V470.39872H553.59872V224H470.39872V470.39872H224V553.59872H470.39872Z"
              />
            </svg>
          </div>
        </div>
        <div
          class="t-tabs__nav-container t-tabs__nav--card t-is-top t-is-addable"
        >
          <div
            class="t-tabs__nav-scroll"
          >
            <div
              class="t-tabs__nav-wrap"
            >
              <div
                class="t-tabs__bar t-is-top"
              />
              <div
                class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
              >
                <span
                  class="t-tabs__nav-item-text-wrapper"
                >
                  选项卡1
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs__content t-is-top"
    >
      <div
        class="t-tab-panel"
      >
        <div
          style="margin: 20px;"
        >
          选项卡1
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`position.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          top
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          bottom
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          left
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          right
        </span>
      </button>
    </div>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                  style="transform: translateX(0px);"
                />
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡1
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        选项卡2
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡3
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡4
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        选项卡5
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        选项卡6
                      </div>
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        选项卡7
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            class="tabs-content"
            style="margin: 20px;"
          >
            这是一个Tabs
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          medium
        </span>
      </button>
      <button
        class="t-button t-button--theme-default t-button--variant-outline"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          large
        </span>
      </button>
    </div>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                  style="transform: translateX(0px);"
                />
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡一
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      选项卡二
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            style="margin: 20px;"
          >
            这是一个Tabs
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-tabs__nav--card t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-active t-is-top"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡一
                  </span>
                </div>
                <div
                  class="t-tabs__nav-item t-tabs__nav--card t-size-m t-is-top"
                >
                  <span
                    class="t-tabs__nav-item-text-wrapper"
                  >
                    选项卡二
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            style="margin: 20px;"
          >
            这是一个Tabs
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`theme.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="tdesign-demo-block-row"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          default
        </span>
      </button>
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        style="position: relative;"
      >
        <span
          class="t-button__text"
        >
          card
        </span>
      </button>
    </div>
    <div
      class="t-tabs"
    >
      <div
        class="t-tabs__header t-is-top"
      >
        <div
          class="t-tabs__nav"
        >
          <div
            class="t-tabs__operations t-tabs__operations--left"
          />
          <div
            class="t-tabs__operations t-tabs__operations--right"
          />
          <div
            class="t-tabs__nav-container t-is-top"
          >
            <div
              class="t-tabs__nav-scroll"
            >
              <div
                class="t-tabs__nav-wrap"
              >
                <div
                  class="t-tabs__bar t-is-top"
                  style="transform: translateX(0px);"
                />
                <div
                  class="t-tabs__bar t-is-top"
                />
                <div
                  class="t-tabs__nav-item t-size-m t-is-active t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      1
                    </span>
                  </div>
                </div>
                <div
                  class="t-tabs__nav-item t-size-m t-is-top"
                >
                  <div
                    class="t-tabs__nav-item-wrapper"
                    style="position: relative;"
                  >
                    <span
                      class="t-tabs__nav-item-text-wrapper"
                    >
                      <div>
                        2
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="t-tabs__content t-is-top"
      >
        <div
          class="t-tab-panel"
        >
          <div
            style="margin: 20px;"
          >
            这是一个Tabs
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
